<resources>
    <string name="hello_world">Hello world!</string>
    <string name="ACTION_MORE">더보기</string>
    <string name="ACTION_SETTINGS">설정</string>
    <string name="ACTION_DELETE_ALL">전체 삭제</string>
    <string name="ACTION_POST_MODIFY">글수정</string>
    <string name="ACTION_POST_DELETE">글삭제</string>
    <string name="ACTION_COMMUNITY_DELETE">커뮤니티 폐쇄</string>
    <string name="APP_NAME">소셜워크</string>
    <string name="TITLE_SLIDE">소셜 슬라이드</string>
    <string name="TITLE_WEB_PAGE">Web Link</string>
    <string name="TITLE_LOGIN">로그인</string>
    <string name="TITLE_GROUP_SELECTION">그룹 선택</string>
    <string name="TITLE_CREATE_GROUP">그룹 생성</string>
    <string name="TITLE_GROUP_DETAIL">그룹 상세 정보</string>
    <string name="TITLE_INFORMATION">알림</string>
    <string name="TITLE_INTRO">인트로</string>
    <string name="TITLE_WALK">걷기</string>
    <string name="TITLE_WALK_RESULT">걷기 결과</string>
    <string name="TITLE_WALK_DETAIL">걷기 상세</string>
    <string name="TITLE_WALK_ROUTE">이동경로</string>
    <string name="TITLE_WALK_HISTORY">소셜워크 히스토리</string>
    <string name="TITLE_RANKING">랭킹</string>
    <string name="TITLE_SETTINGS">설정</string>
    <string name="TITLE_SPONSOR">후원 프로젝트</string>
    <string name="TITLE_COMMUNITY">그룹 커뮤니티</string>
    <string name="TITLE_COMMUNITY_POSTING">커뮤니티 글쓰기</string>
    <string name="TITLE_COMMUNITY_POST_DETAIL">커뮤니티 글상세</string>
    <string name="TITLE_REPLY_POSTING">커뮤니티 댓글쓰기</string>
    <string name="TITLE_MORE">더보기</string>
    <string name="TITLE_PROFILE">마이페이지</string>
    <string name="TITLE_CHANGE_COMMUNITY_NAME">커뮤니티 이름 변경</string>
    <string name="TITLE_GLOBAL_BENEFICIARIES">전체 후원 프로젝트</string>
    <string name="TITLE_HISTORY_BENEFICIARIES">이전 후원 프로젝트</string>
    <string name="TITLE_BENEFICIARY_DETAIL">후원프로젝트 상세</string>
    <string name="TITLE_COMMUNITY_DETAIL">커뮤니티 상세</string>
    <string name="TITLE_COMMUNITY_MANAGE">커뮤니티 관리</string>
    <string name="TITLE_COMMUNITY_OWNER">커뮤니티 위임</string>
    <string name="CLOSE">닫기</string>
    <string name="CONFIRM">확인</string>
    <string name="LOGIN">로그인</string>
    <string name="LOGOUT">로그아웃</string>
    <string name="USER_ID">사용자 ID</string>
    <string name="PASSWORD">비밀번호</string>
    <string name="PASSWORD_CONFIRM">비밀번호 확인</string>
    <string name="SIGN_UP">회원가입</string>
    <string name="FIND_PASSWORD"><u>비밀번호 초기화</u></string>
    <string name="AUTO_LOGIN">자동 로그인</string>
    <string name="SEARCH">찾기</string>
    <string name="CANCEL">취소</string>
    <string name="SELECT">선택</string>
    <string name="BACK">뒤로</string>
    <string name="EDIT">수정</string>
    <string name="EXIT">종료</string>
    <string name="NOTICE">공지사항</string>
    <string name="PROFILE">마이페이지</string>
    <string name="HELP">FAQ</string>
    <string name="BENEFICIARY">후원프로젝트</string>
    <string name="COMMUNITY">커뮤니티</string>
    <string name="COMMUNITY_NAME">커뮤니티 이름</string>
    <string name="HISTORY">히스토리</string>
    <string name="MORE">더보기</string>
    <string name="SOCIALWALK_INFORM">소셜워크 알리기</string>
    <string name="SOCIALWALK_INFO">소셜워크 소개</string>
    <string name="HEART_MALL">하트몰</string>
    <string name="SPONSOR">후원사</string>
    <string name="SOCIALWALK_VOLUNTEERS">소셜워크 봉사단</string>
    <string name="SETTINGS">설정</string>
    <string name="QNA">문의하기</string>
    <string name="MY_GROUP">내그룹</string>
    <string name="WALKING_IDLE">걷기 대기중</string>
    <string name="WALKING_PROGRESS">걷기 진행중</string>
    <string name="CREATE_GROUP">그룹 생성</string>
    <string name="JOIN_REQUEST">가입 신청</string>
    <string name="JOIN_TYPE">가입 방식</string>
    <string name="GROUP_NAME">그룹 이름</string>
    <string name="GROUP_DESCRIPTION">그룹 설명</string>
    <string name="GROUP_MESSAGE">그룹 안내글</string>
    <string name="GROUP_MANAGE">그룹 관리</string>
    <string name="CHECK_DUPLICATE">중복 확인</string>
    <string name="GROUP_SIGNUP">가입 신청</string>
    <string name="GROUP_SECESSION">그룹 탈퇴</string>
    <string name="GROUP_MEMBERS">멤버수</string>
    <string name="MEMBER_LIST">멤버 리스트</string>
    <string name="APPLICANTS">가입신청자</string>
    <string name="START">시작</string>
    <string name="STOP">중지</string>
    <string name="SUPPORT">후원하기</string>
    <string name="DISTANCE">이동 거리</string>
    <string name="AVERAGE_SPEED">평균 속도</string>
    <string name="CURRENT_SPEED">현재 속도</string>
    <string name="TOTAL_HEARTS">전체 하트</string>
    <string name="WALK_HEARTS">소셜 워크 하트</string>
    <string name="TOUCH_HEARTS">소셜 터치 하트</string>
    <string name="WALK_TIME">이동 시간</string>
    <string name="BURNED_CALLORIES">예상 소모 칼로리</string>
    <string name="SHOW_ROUTE">이동 경로 보기</string>
    <string name="START_TIME">시작 시간</string>
    <string name="END_TIME">종료 시간</string>
    <string name="SHOW_RANKING">랭킹 보기</string>
    <string name="CONTINUE">계속</string>
    <string name="DETAIL">상세정보</string>
    <string name="DELETE">삭제</string>
    <string name="UPLOAD">서버 적립</string>
    <string name="BY_LOCAL">지역</string>
    <string name="BY_GROUP">단체</string>
    <string name="TOTAL">전체</string>
    <string name="SHOW_ALL">모두보기</string>
    <string name="EDIT_PROFILE">프로필 수정</string>
    <string name="WRITER">작성자</string>
    <string name="VIEW_COUNT">조회수</string>
    <string name="REPLY_COUNT">댓글수</string>
    <string name="SUBJECT">제목</string>
    <string name="POSTING">글등록</string>
    <string name="REPLY_POSTING">댓글쓰기</string>
    <string name="USER_UPPER">USER</string>
    <string name="GROUP_UPPER">GROUP</string>
    <string name="LOADING">로딩중</string>
    <string name="NATIONAL">전체</string>
    <string name="LOCAL">지역</string>
    <string name="WRITE">글쓰기</string>
    <string name="WRITE_REPLY">댓글쓰기</string>
    <string name="WALK_START">걷기시작</string>
    <string name="WALK_STOP">걷기종료</string>
    <string name="HEART">하트</string>
    <string name="NO_GROUP">그룹 미가입</string>
    <string name="EMAIL">이메일</string>
    <string name="NAME">이름</string>
    <string name="CHANGE_PASSWORD">비밀번호 변경</string>
    <string name="SEX">성별</string>
    <string name="BIRTHDAY">생년월일</string>
    <string name="WEIGHT">몸무게</string>
    <string name="JOIN_GROUP">가입그룹</string>
    <string name="SECESSION">회원탈퇴</string>
    <string name="MAN">남성</string>
    <string name="WOMAN">여성</string>
    <string name="MAP_MODE">지도모드</string>
    <string name="DATA_WARNING">데이터모드 경고</string>
    <string name="SLIDE_OPTION">슬라이드 사용</string>
    <string name="SOCIALWALK_COPYTITLE">공공을 위한 사회적 걸음</string>
    <string name="SOCIALWALK_COPYTITLE2">SOCIAL WALK</string>
    <string name="SOCIALWALK_PROMOTION">인텔SSD 사용자모임에서 함께 응원합니다.</string>
    <string name="JOIN_REQUEST_MESSAGE">가입 신청 메세지</string>
    <string name="ORGANIZAION">단체</string>
    <string name="MEMBER">소속</string>
    <string name="LOCAL1">지역1</string>
    <string name="LOCAL2">지역2</string>
    <string name="APPLY">적용</string>
    <string name="AGE_UNIT">살</string>
    <string name="MONEY_UNIT">원</string>
    <string name="CALORIES_UNIT">cal</string>
    <string name="ALTITUDE">고도</string>
    <string name="RANK_PERSONAL">개인랭킹</string>
    <string name="RANK_GROUP_SUM">그룹랭킹(총액)</string>
    <string name="RANK_GROUP_AVG">그룹랭킹(1인평균)</string>
    <string name="TOTAL_ACCUMULATED_HEARTS">총 누적 하트</string>
    <string name="BENEFIT_IN_PROGRESS">후원진행중</string>
    <string name="UNSET">미지정</string>
    <string name="SET_NAME">이름 설정</string>
    <string name="SET_WEIGHT">몸무게 설정</string>
    <string name="SET_BIRTHDAY">생년월일 설정</string>
    <string name="SET_GENDER">성별 설정</string>
    <string name="SET_PASSWORD">비밀번호 입력</string>
    <string name="SET_ORGANIZATION">단체 설정</string>
    <string name="SET_LOCAL">지역 설정</string>
    <string name="BENEFIT_DATE">후원일</string>
    <string name="BENEFIT_MONEY">후원금액</string>
    <string name="CURRENT_MONEY">현재 모금액</string>
    <string name="TARGET_MONEY">치료지원비</string>
    <string name="MAN_UNIT">명</string>
    <string name="VERSION">버전</string>
    <string name="PARTICIPANTS">참여인원</string>
    <string name="FREE">free</string>
    <string name="MEMBER_COUNT">회원수</string>
    <string name="PERSONAL_RANKING">개인랭킹</string>
    <string name="GROUP_RANKING">그룹랭킹(총액)</string>
    <string name="AVERAGE_RANKING">그룹랭킹(1인평균)</string>
    <string name="SUCCESS">성공</string>
    <string name="FAIL">실패</string>
    <string name="OK">확인</string>
    <string name="VOLUNTEERS">봉사단</string>
    <string name="FORMAT_DISTANCE">%.2f km</string>
    <string name="FORMAT_SPEED">%.1f km/h</string>
    <string name="FORMAT_TIME">HH:mm:ss</string>
    <string name="FORMAT_HEART">%d하트</string>
    <string name="FORMAT_ALTITUDE">%.1f m</string>
    <string name="FORMAT_CALORIES">###,### 칼로리</string>
    <string name="MSG_EMPTY_USERID">사용자 ID를 입력해 주십시오.</string>
    <string name="MSG_EMPTY_EMAIL">이메일 주소를 입력해 주십시오.</string>
    <string name="MSG_EMPTY_PASSWORD">비밀번호를 입력해 주십시오.</string>
    <string name="MSG_EMPTY_PASSWORD_CONFIRM">확인 비밀번호를 입력해 주십시오.</string>
    <string name="MSG_EMPTY_GROUP_NAME">그룹 이름을 입력해 주십시오.</string>
    <string name="MSG_EMPTY_SUBJECT">제목을 입력해 주십시요.</string>
    <string name="MSG_EMPTY_CONTENTS">내용을 입력해 주십시요.</string>
    <string name="MSG_EMPTY_NAME">이름을 입력해 주십시요.</string>
    <string name="MSG_CHECK_DUPLICATE">먼저 중복 확인을 해주십시요.</string>
    <string name="MSG_DUPLICATE_GROUP_NAME">동일한 그룹 이름이 있습니다. 다시 입력해 주십시오.</string>
    <string name="MSG_AVAILABLE_NAME">사용 가능한 이름입니다.</string>
    <string name="MSG_EMPTY_KEYWORD">검색어를 입력해 주십시오.</string>
    <string name="MSG_NO_LOGIN_EXIT">소셜워크는 로그인이 필요한 서비스입니다. 앱을 종료합니다.</string>
    <string name="MSG_WALK_RESULT_1">이번 걸음으로 어려운 이웃을 위해</string>
    <string name="MSG_WALK_RESULT_2">가 기부되었습니다.</string>
    <string name="MSG_NETWORK_NOT_CONNECTED">네트워크 접근이 불가능합니다. 앱을 종료합니다.</string>
    <string name="MSG_GPS_SETTING_CONFIRM">GPS 위치 서비스에 접근할 수 없습니다. 걷기 기능을 이용하기 위해서 GPS를 설정해 주십시오.</string>
    <string name="MSG_EXIT_CONFIRM">소셜워크 앱을 종료하시겠습니까?</string>
    <string name="MSG_STOP_WALKING_CONFIRM">걷기를 종료하시겠습니까?</string>
    <string name="MSG_CLEAR_HISTORY_CONFIRM">모든 히스토리를 삭제하시겠습니까?</string>
    <string name="MSG_COMMUNITY_DELETE_CONFIRM">커뮤니티를 폐쇄하시겠습니까?</string>
    <string name="MSG_LOGOUT_CONFIRM">로그아웃 하시겠습니까?\n로그아웃한 후에는 프로그램이 종료합니다.</string>
    <string name="MSG_COMMUNITY_SIGNUP_CONFIRM">커뮤니티에 가입하지 않았습니다.\n커뮤니티 검색 화면으로 이동하시겠습니까?</string>
    <string name="MSG_NO_SEARCH_RESULT">검색결과가 없습니다.</string>
    <string name="MSG_NO_COMMUNITY_POST">커뮤니티 글이 없습니다.</string>
    <string name="MSG_COMMUNITY_POSTING_SUCCESS">커뮤니티 글이 등록되었습니다.</string>
    <string name="MSG_MY_LOCATION_FAIL">현재 위치를 확인할 수 없습니다.</string>
    <string name="MSG_PAGE_LOADING">페이지를 읽고 있습니다.</string>
    <string name="MSG_LOADING">데이타를 처리중입니다.</string>
    <string name="MSG_ACCOUNT_NOT_EXIST">존재하지 않는 회원입니다. 회원가입을 해주십시요.</string>
    <string name="MSG_INVALID_POST">잘못된 커뮤니티 글정보입니다.</string>
    <string name="MSG_POST_DELETE_CONFIRM">커뮤니티 글을 삭제하시겠습니까?</string>
    <string name="MSG_REPLY_DELETE_CONFIRM">댓글을 삭제하시겠습니까?</string>
    <string name="MSG_PASSWORD_MISSMATCH">비밀번호가 일치하지 않습니다.</string>
    <string name="MSG_SEND_WALK_DATA">걷기 정보를 전송중입니다.</string>
    <string name="MSG_NOTI_SOCIAL_WALKING">소셜워크 걷기가 진행중입니다.</string>
    <string name="MSG_SEND_DATA">서버에 데이타를 전송중입니다.</string>
    <string name="MSG_DUPLICATE_CHECK">중복확인을 해주십시요.</string>
    <string name="MSG_DUPLICATE_EMAIL">이미 등록되어 있는 이메일 주소입니다.</string>
    <string name="MSG_INVALID_AREA">단체/지역 정보를 확인해 주십시요.</string>
    <string name="MSG_SECESSION_CONFIRM">회원탈퇴를 진행하시겠습니까?\n등록되었던 이메일로는 재가입이 불가능합니다.</string>
    <string name="MSG_API_FAIL">명령 전송이 실패했습니다.</string>
    <string name="MSG_SERVICE_PREPARING">서비스 준비중입니다.</string>
    <string name="MSG_MEMBER_ALLOW_CONFIRM">선택한 사용자를 승인하시겠습니까?</string>
    <string name="MSG_MEMBER_DENY_CONFIRM">선택한 사용자를 거절하시겠습니까?</string>
    <string name="MSG_COMMUNITY_MEMBER_EXIST">커뮤니티 멤버가 있으면 폐쇄할 수 없습니다.</string>
    <string name="MSG_COMMUNITY_SECESSION_CONFIRM">가입된 커뮤니티에서 탈퇴하시겠습니까?</string>
    <string name="MSG_RECEIVE_USER_DATA">사용자 정보를 수신중입니다.</string>
</resources>