<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

	<RelativeLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" >	    
	    <TextView 
	        android:text="@string/USER_ID"
	        android:layout_width="80dp" android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true" />
	    <EditText 
	        android:id="@+id/loginUid"
	        android:inputType="text"
	        android:layout_width="160dp" android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true" />
	    
	</RelativeLayout>
    
	<RelativeLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content" >	    
	    <TextView 
	        android:text="@string/PASSWORD"
	        android:layout_width="80dp" android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true" />
	    <EditText 
	        android:id="@+id/loginPwd"
	        android:inputType="textPassword"
	        android:layout_width="160dp" android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true" />
	    
	</RelativeLayout>
	
	<RelativeLayout
	    android:layout_width="match_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp" >
	    
	    <CheckBox
	        android:id="@+id/chkAutoLogin"
	        android:text="@string/AUTO_LOGIN"
	        android:checked="true" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true" />
	    <Button
	        android:id="@+id/btnLogin"
	        android:text="@string/LOGIN"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true" />
	    	    
	</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp">

	    <Button
	        android:id="@+id/btnSignUp"
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginLeft="16dp"
	        android:text="@string/SIGN_UP"
	        android:textSize="12sp" />

	    <Button 
	        android:id="@+id/btnFindPwd"
	        android:text="@string/FIND_PASSWORD"
	        android:textSize="12sp"	        
	        android:layout_width="120dp"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="16dp" />
	    	</RelativeLayout>

</LinearLayout>