<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateGroupActivity" >

    <RelativeLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/btnCheck"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/CHECK_DUPLICATE" />
        <EditText
            android:id="@+id/groupName"
            android:inputType="text"
            android:hint="@string/GROUP_NAME"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btnCheck" />        
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/descLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/nameLayout" >
        <TextView
            android:id="@+id/groupDescLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/GROUP_DESCRIPTION" />
        <EditText
            android:id="@+id/groupDesc"
            android:inputType="textMultiLine"
            android:layout_width="match_parent" 
            android:layout_height="200dp"
            android:layout_below="@+id/groupDescLabel" />
        
    </RelativeLayout>
    
	<LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button 
            android:id="@+id/btnCancel"
            android:text="@string/CANCEL"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"/>
        <Button 
            android:id="@+id/btnCreate"
            android:text="@string/CREATE_GROUP"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp" />        
    </LinearLayout>
    

</RelativeLayout>
