<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/WHITE" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="20dp"
        android:paddingRight="8dp"
        android:background="@color/MAIN_BG" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="24sp"
            android:textColor="@color/WHITE"
            android:textStyle="bold"
            android:text="@string/SET_PASSWORD" />
    </RelativeLayout>
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:padding="16dp" >
        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:padding="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/field_rounded_bg"
            android:hint="@string/PASSWORD" >
        </EditText>
        <EditText
            android:id="@+id/passwordConfirm"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:ems="10"
            android:padding="4dp"
            android:background="@drawable/field_rounded_bg"
            android:hint="@string/PASSWORD_CONFIRM" >
        </EditText>
	</RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="6dp" >
        <Button
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/gray_bg_selector"
            android:layout_marginRight="6dp"
            android:textSize="18sp"
            android:textColor="@color/WHITE"
            android:text="@string/CANCEL" />
        <Button
            android:id="@+id/okButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/yellow_bg_selector"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/WHITE"
            android:text="@string/CONFIRM" />
	</LinearLayout>
	
</LinearLayout>
