<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RankingActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/TITLE_RANKING" />
    
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/title" >
        
        <Button
            android:id="@+id/btnByGroup"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/BY_GROUP" />
        
		<Button
            android:id="@+id/btnTotal"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/TOTAL" />
        
    </LinearLayout>
    
    <ListView
        android:id="@+id/rankingList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/buttonLayout" />

</RelativeLayout>
