<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".WalkResultActivity" >

    <RelativeLayout
        android:id="@+id/walkInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="40dip"
        android:paddingRight="40dip"
        android:layout_alignParentTop="true" >
        <RelativeLayout
            android:id="@+id/distanceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="4dip" >
            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/DISTANCE" />
            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/distanceLabel"
                android:gravity="right"
                android:textStyle="bold"
                android:text="XXX.X km" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distanceLayout"
            android:layout_marginBottom="4dip" >
            <TextView
                android:id="@+id/walkTimeLabel"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/WALK_TIME" />
            <TextView
                android:id="@+id/walkTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/walkTimeLabel"
                android:gravity="right"
                android:textStyle="bold"
                android:text="00:00:00" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/speedLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/timeLayout"
            android:layout_marginBottom="4dip" >
            <TextView
                android:id="@+id/walkSpeedLabel"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/AVERAGE_SPEED" />
            <TextView
                android:id="@+id/walkSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/walkSpeedLabel"
                android:gravity="right"
                android:textStyle="bold"
                android:text="XXX.XX km/h" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/caloriesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speedLayout"
            android:layout_marginBottom="4dip" >
            <TextView
                android:id="@+id/caloriesLabel"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/BURNED_CALLORIES" />
            <TextView
                android:id="@+id/calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/caloriesLabel"
                android:gravity="right"
                android:textStyle="bold"
                android:text="X,XXX cal" />
        </RelativeLayout>        
    </RelativeLayout>
    
	<Button
        android:id="@+id/btnRoute"
        android:drawableLeft="@drawable/ic_launcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/walkInfoLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/SHOW_ROUTE" />
    
    
    <ImageButton
        android:id="@+id/btnBanner"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRoute"
        android:layout_centerHorizontal="true" />
    <RelativeLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBanner"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="40dip"
        android:paddingRight="40dip" >
        <TextView
            android:id="@+id/walkResultMessage1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/MSG_WALK_RESULT_1" />
        <TextView
            android:id="@+id/walkResultMessage2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/walkResultMessage1"
            android:text="@string/MSG_WALK_RESULT_2" />        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/shareLayout"
        android:orientation="vertical"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageLayout" 
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="40dip"
        android:paddingRight="40dip" >
		<Button
		    android:id="@+id/btnFacebook"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:background="@drawable/ic_launcher" />        
    </LinearLayout>
    <Button
        android:id="@+id/btnDetail"
        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_launcher" />
	<Button
        android:id="@+id/btnClose"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/CLOSE" />
    
    
</RelativeLayout>
